Fix: 4.	Product Record Saat tarik data dari Received Order maka buyer,type,style dan quantity terbawa secara otomatis.

--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/outstandingorder/outstandingorderEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/outstandingorder/outstandingorderEditDialogClass.form
@@ -753,7 +753,7 @@
                 <EtchetBorder/>
               </Border>
             </Property>
-            <Property name="name" type="java.lang.String" value="buyerid" noResource="true"/>
+            <Property name="name" type="java.lang.String" value="buyername" noResource="true"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton3">
