--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProductionRecord/PREditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/ProductionRecord/PREditDialogClass.form
@@ -153,7 +153,7 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jLabel6" min="-2" pref="53" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="client_name1" min="-2" pref="83" max="-2" attributes="0"/>
+                                      <Component id="qtyLbl" min="-2" pref="83" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -212,7 +212,7 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="client_name1" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
+                                  <Component id="qtyLbl" alignment="3" min="-2" pref="20" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
@@ -393,7 +393,7 @@
                 <Property name="name" type="java.lang.String" value="labelQty" noResource="true"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="client_name1">
+            <Component class="javax.swing.JTextField" name="qtyLbl">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Arial" size="10" style="0"/>
