--- a/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/negara/negaraEditDialogClass.form
+++ b/Sample2Client1/src/main/java/thoiyk/HumanInterfaceComponent/negara/negaraEditDialogClass.form
@@ -36,9 +36,8 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLayeredPane1" min="-2" pref="126" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
+              <Component id="jLayeredPane1" min="-2" pref="126" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -94,9 +93,9 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="ID" min="-2" pref="50" max="-2" attributes="0"/>
                           <Component id="Nama" min="-2" pref="203" max="-2" attributes="0"/>
-                          <Component id="jTextField2" alignment="0" min="-2" pref="47" max="-2" attributes="0"/>
+                          <Component id="jTextField2" alignment="0" min="-2" pref="87" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="225" max="32767" attributes="0"/>
+                      <EmptySpace pref="235" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -148,7 +147,7 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblNama">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Nama:"/>
+                <Property name="text" type="java.lang.String" value="Name"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="Nama">
@@ -158,12 +157,12 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lblTelp">
               <Properties>
-                <Property name="text" type="java.lang.String" value="MataUangID:"/>
+                <Property name="text" type="java.lang.String" value="Currency"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField2">
               <Properties>
-                <Property name="name" type="java.lang.String" value="telp" noResource="true"/>
+                <Property name="name" type="java.lang.String" value="currency" noResource="true"/>
               </Properties>
             </Component>
           </SubComponents>
