--- a/Sample2Client1/src/main/java/Sample1/HumanInterfaceComponent/sample_cliente/clientEditDialogClass.form
+++ b/Sample2Client1/src/main/java/Sample1/HumanInterfaceComponent/sample_cliente/clientEditDialogClass.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.2" maxVersion="1.2" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <NonVisualComponents>
@@ -223,6 +223,9 @@
                 <Property name="text" type="java.lang.String" value="Express Delivery"/>
                 <Property name="name" type="java.lang.String" value="clientExpressDelivery" noResource="true"/>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_SerializeTo" type="java.lang.String" value="clientEditDialogClass_clientExpressDelivery"/>
+              </AuxValues>
             </Component>
             <Component class="javax.swing.JRadioButton" name="clientDiscount0">
               <Properties>
