Update: Product In Input Header dan Detail

--- a/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
+++ b/Sample2Client1/src/main/java/Sample1/KFrameWorkDesktopClass.form
@@ -208,6 +208,23 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="POItemActionPerformed"/>
               </Events>
             </MenuItem>
+            <Menu class="javax.swing.JMenu" name="ProductInOutMenu">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Product In / Out"/>
+                <Property name="name" type="java.lang.String" value="ProductInOutMenu" noResource="true"/>
+              </Properties>
+              <SubComponents>
+                <MenuItem class="javax.swing.JMenuItem" name="ProductInItem">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Product In"/>
+                    <Property name="name" type="java.lang.String" value="ProductInItem" noResource="true"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ProductInItemActionPerformed"/>
+                  </Events>
+                </MenuItem>
+              </SubComponents>
+            </Menu>
             <MenuItem class="javax.swing.JMenuItem" name="clientItem">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
